--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,8 @@ dependencies {
     //Dagger
     implementation 'com.google.dagger:dagger:2.40.5'
     implementation 'com.google.dagger:dagger-android-support:2.40'
+    androidTestImplementation 'androidx.test:rules:1.4.1-alpha04'
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.5.0-alpha04'
     kapt 'com.google.dagger:dagger-compiler:2.40.5'
     kapt 'com.google.dagger:dagger-android-processor:2.40'
     //Retrofit
@@ -85,7 +87,7 @@ dependencies {
 
     //Testing
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0-alpha04'
     testImplementation 'junit:junit:4.13.2'
     testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
     testImplementation 'android.arch.core:core-testing:1.1.1'
